--- a/01Blog/index.html
+++ b/01Blog/index.html
@@ -9,50 +9,57 @@
 
   <title>Desafio 01 | Blog</title>
 
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Space+Grotesk:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <main class="summary-container">
-    <div class="summary-result color-lightLavender">
-      <h2>Your Result</h2>
-      <div class="result-container">
-        <p><span class="color-white">76</span>of 100</p>
-      </div>
-      <h1 class="color-white">Great</h1>
-      <p>You scored higher than 65% of the people who have taken these tests.</p>
+  <header class="bg-dark20">
+    <div class="container">
+      <h1 class="c-dark60"><span class="c-brand">Code</span>lândia</h1>
+      <form>
+        <input class="input-search bg-dark30" type="search" name="search" id="search" placeholder="Pesquisar no blog">
+      </form>
     </div>
-    <div class="summary-stats">
-      <h1>Summary</h1>
-      <ul>
-        <li class="bg-lightRed">
-          <img src="./assets/images/icon-reaction.svg" alt="">
-          <p class="color-lightRed">Reaction</p>
-          <p class="range"><span>80</span> / 100</p>
-        </li>
-        <li class="bg-orangeyYellow">
-          <img src="./assets/images/icon-memory.svg" alt="">
-          <p class="color-orangeyYellow">Memory</p>
-          <p class="range"><span>92</span> / 100</p>
-        </li>
-        <li class="bg-greenTeal">
-          <img src="./assets/images/icon-verbal.svg" alt="">
-          <p class="color-greenTeal">Verbal</p>
-          <p class="range"><span>61</span> / 100</p>
-        </li>
-        <li class="bg-cobaltBlue">
-          <img src="./assets/images/icon-visual.svg" alt="">
-          <p class="color-cobaltBlue">Visual</p>
-          <p class="range"><span>72</span> / 100</p>
-        </li>
-      </ul>
-      <button>Continue</button>
-    </div>
+  </header>
+  <main class="bg-dark10">
+    <ul class="articles-list container">
+      <li class="article bg-dark20">
+        <div class="article-time">
+          <time class="c-brand">17 de ago, 2024</time>
+          <svg class="icon" width="24" height="24" viewBox="0 0 200 200" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M19.6656 98.2928L19.666 98.2931L97.3142 175.941L99.7891 178.416L102.264 175.941L179.912 98.2931C188.54 89.6655 193.297 78.1784 193.297 65.9795C193.297 53.7806 188.54 42.2936 179.912 33.666L179.912 33.6656C171.285 25.0409 159.8 20.2813 147.599 20.2813C135.399 20.2813 123.913 25.0408 115.285 33.6656L115.285 33.6661L99.7889 49.164L84.2909 33.666C75.6657 25.0408 64.1788 20.2813 51.9795 20.2813C39.7802 20.2813 28.2935 25.0408 19.6663 33.6656C11.0382 42.2914 6.28125 53.7809 6.28125 65.9795C6.28125 78.1789 11.0408 89.6656 19.6656 98.2928ZM97.3142 56.5888L99.7892 59.0638L102.264 56.5886L120.234 38.6161C127.55 31.3029 137.256 27.2813 147.599 27.2813C157.943 27.2813 167.647 31.3028 174.963 38.6161C182.277 45.9308 186.297 55.6371 186.297 65.9795C186.297 76.3221 182.277 86.0286 174.962 93.3434L99.7891 168.517L24.6161 93.3437C24.616 93.3436 24.6158 93.3435 24.6157 93.3434C17.3028 86.0282 13.2812 76.3215 13.2812 65.9795C13.2812 55.6367 17.3012 45.9283 24.6154 38.6161C31.9306 31.3029 41.6374 27.2813 51.9795 27.2813C62.3218 27.2813 72.0284 31.303 79.3412 38.6157L97.3142 56.5888ZM181.171 99.5517L99.7891 180.933L18.4074 99.5517C9.435 90.5793 4.5 78.6664 4.5 65.9795C4.5 53.2905 9.43494 41.3798 18.4074 32.4074C27.3798 23.4349 39.2905 18.5 51.9795 18.5C64.6686 18.5 76.5793 23.4349 85.5517 32.4074L97.3142 44.1699L99.7891 46.6447L102.264 44.1699L114.026 32.4074C122.999 23.435 134.912 18.5 147.599 18.5C160.288 18.5 172.198 23.4349 181.171 32.4074L181.171 32.4077C190.145 41.3798 195.078 53.2902 195.078 65.9795C195.078 78.6689 190.145 90.5793 181.171 99.5514L181.171 99.5517Z" />
+          </svg>
+        </div>
+        <h2>O que é linguagem de programação? Conheça as principais</h2>
+        <p class="c-dark50">Uma das mais populares vertentes da tecnologia da informação, a área de programação segue tendo muita demanda de trabalho justamente pela velocidade com que dispositivos tecnológicos vêm avançando.</p>
+      </li>
+      <li class="article bg-dark20">
+        <div class="article-time">
+          <time class="c-brand">12 de jul, 2024</time>
+          <svg class="icon" width="24" height="24" viewBox="0 0 200 200" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M19.6656 98.2928L19.666 98.2931L97.3142 175.941L99.7891 178.416L102.264 175.941L179.912 98.2931C188.54 89.6655 193.297 78.1784 193.297 65.9795C193.297 53.7806 188.54 42.2936 179.912 33.666L179.912 33.6656C171.285 25.0409 159.8 20.2813 147.599 20.2813C135.399 20.2813 123.913 25.0408 115.285 33.6656L115.285 33.6661L99.7889 49.164L84.2909 33.666C75.6657 25.0408 64.1788 20.2813 51.9795 20.2813C39.7802 20.2813 28.2935 25.0408 19.6663 33.6656C11.0382 42.2914 6.28125 53.7809 6.28125 65.9795C6.28125 78.1789 11.0408 89.6656 19.6656 98.2928ZM97.3142 56.5888L99.7892 59.0638L102.264 56.5886L120.234 38.6161C127.55 31.3029 137.256 27.2813 147.599 27.2813C157.943 27.2813 167.647 31.3028 174.963 38.6161C182.277 45.9308 186.297 55.6371 186.297 65.9795C186.297 76.3221 182.277 86.0286 174.962 93.3434L99.7891 168.517L24.6161 93.3437C24.616 93.3436 24.6158 93.3435 24.6157 93.3434C17.3028 86.0282 13.2812 76.3215 13.2812 65.9795C13.2812 55.6367 17.3012 45.9283 24.6154 38.6161C31.9306 31.3029 41.6374 27.2813 51.9795 27.2813C62.3218 27.2813 72.0284 31.303 79.3412 38.6157L97.3142 56.5888ZM181.171 99.5517L99.7891 180.933L18.4074 99.5517C9.435 90.5793 4.5 78.6664 4.5 65.9795C4.5 53.2905 9.43494 41.3798 18.4074 32.4074C27.3798 23.4349 39.2905 18.5 51.9795 18.5C64.6686 18.5 76.5793 23.4349 85.5517 32.4074L97.3142 44.1699L99.7891 46.6447L102.264 44.1699L114.026 32.4074C122.999 23.435 134.912 18.5 147.599 18.5C160.288 18.5 172.198 23.4349 181.171 32.4074L181.171 32.4077C190.145 41.3798 195.078 53.2902 195.078 65.9795C195.078 78.6689 190.145 90.5793 181.171 99.5514L181.171 99.5517Z" />
+          </svg>
+        </div>
+        <h2>GitHub agora permite fazer login sem precisar de senha</h2>
+        <p class="c-dark50">O GitHub anunciou nesta quarta-feira (12) o acesso a partir das passkeys, método de autenticação sem senhas. A novidade está disponível em uma versão beta pública e pode substituir a autenticação em dois fatores.</p>
+      </li>
+      <li class="article bg-dark20">
+        <div class="article-time">
+          <time class="c-brand">21 de jun, 2024</time>
+          <svg class="icon" width="24" height="24" viewBox="0 0 200 200" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M19.6656 98.2928L19.666 98.2931L97.3142 175.941L99.7891 178.416L102.264 175.941L179.912 98.2931C188.54 89.6655 193.297 78.1784 193.297 65.9795C193.297 53.7806 188.54 42.2936 179.912 33.666L179.912 33.6656C171.285 25.0409 159.8 20.2813 147.599 20.2813C135.399 20.2813 123.913 25.0408 115.285 33.6656L115.285 33.6661L99.7889 49.164L84.2909 33.666C75.6657 25.0408 64.1788 20.2813 51.9795 20.2813C39.7802 20.2813 28.2935 25.0408 19.6663 33.6656C11.0382 42.2914 6.28125 53.7809 6.28125 65.9795C6.28125 78.1789 11.0408 89.6656 19.6656 98.2928ZM97.3142 56.5888L99.7892 59.0638L102.264 56.5886L120.234 38.6161C127.55 31.3029 137.256 27.2813 147.599 27.2813C157.943 27.2813 167.647 31.3028 174.963 38.6161C182.277 45.9308 186.297 55.6371 186.297 65.9795C186.297 76.3221 182.277 86.0286 174.962 93.3434L99.7891 168.517L24.6161 93.3437C24.616 93.3436 24.6158 93.3435 24.6157 93.3434C17.3028 86.0282 13.2812 76.3215 13.2812 65.9795C13.2812 55.6367 17.3012 45.9283 24.6154 38.6161C31.9306 31.3029 41.6374 27.2813 51.9795 27.2813C62.3218 27.2813 72.0284 31.303 79.3412 38.6157L97.3142 56.5888ZM181.171 99.5517L99.7891 180.933L18.4074 99.5517C9.435 90.5793 4.5 78.6664 4.5 65.9795C4.5 53.2905 9.43494 41.3798 18.4074 32.4074C27.3798 23.4349 39.2905 18.5 51.9795 18.5C64.6686 18.5 76.5793 23.4349 85.5517 32.4074L97.3142 44.1699L99.7891 46.6447L102.264 44.1699L114.026 32.4074C122.999 23.435 134.912 18.5 147.599 18.5C160.288 18.5 172.198 23.4349 181.171 32.4074L181.171 32.4077C190.145 41.3798 195.078 53.2902 195.078 65.9795C195.078 78.6689 190.145 90.5793 181.171 99.5514L181.171 99.5517Z" />
+          </svg>
+        </div>
+        <h2>Por que os hiperlinks são azuis em sua maioria?</h2>
+        <p class="c-dark50">Quem navega na internet, certamente já percebeu que ela conta com diversos recursos para tornar a nossa vida mais fácil. Entre essas opções podemos mencionar os hiperlinks - uma palavra ou termo clicável que direciona o leitor.</p>
+      </li>
+    </ul>
   </main>
+  <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
